Adds placeholder to form inputs

--- a/app/index.html
+++ b/app/index.html
@@ -147,9 +147,6 @@
           <div class="TwoColumnContainer-contentBlack">
             If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
           </div>
-          <div class="Panel-content">
-            <div class="Button">REACH OUT</div>
-          </div>
         </div>
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
@@ -159,9 +156,15 @@
           <div class="TwoColumnContainer-contentBlack">
             If you’re an experienced entrepreneur or domain expert and want to get involved with top-notch entrepreneurs, please reach out to us. If there’s a good fit, we’ll add you to our list of experts and connect you with ventures which can use your expertise.
           </div>
-          <div class="Panel-content">
-            <div class="Button">RECOMMEND</div>
-          </div>
+        </div>
+      </div>
+
+      <div class="TwoColumnContainer">
+        <div class="TwoColumnContainer-column">
+          <div class="Button">REACH OUT</div>
+        </div>
+        <div class="TwoColumnContainer-column">
+          <div class="Button">RECOMMEND</div>
         </div>
       </div>
     </section>
@@ -189,17 +192,17 @@
           <div class="InputGroup InputGroup--bottomBorder">
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="firstName">First Name</label>
-              <input class="InputGroup-input" type="text" name="FNAME" id="mce-FNAME">
+              <input class="InputGroup-input" type="text" name="FNAME" id="mce-FNAME" placeholder="First Name">
             </div>
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="lastName">Last Name</label>
-              <input class="InputGroup-input" type="text" name="LNAME" id="mce-LNAME">
+              <input class="InputGroup-input" type="text" name="LNAME" id="mce-LNAME" placeholder="Last Name">
             </div>
           </div>
           <div class="InputGroup">
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="email">Email</label>
-              <input class="InputGroup-input" type="email" name="EMAIL" id="mce-EMAIL">
+              <input class="InputGroup-input" type="email" name="EMAIL" id="mce-EMAIL" placeholder="Email">
             </div>
           </div>
           <button type="submit" class="Button Button--outline">join us</button>
@@ -219,7 +222,8 @@
             <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
-              <div class="Person-company">VP, Data and Science @ GoodGuide</div>
+              <div class="Person-company">GoodGuide</div>
+              <div class="Person-job">VP, Data and Science</div>
               <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/santosvieira"><img src="images/linkedin.png"/></a>
             </div>
           </div>
@@ -229,7 +233,8 @@
             <img class="Person-image" src="images/marcosa.png"/></img>
             <div class="Person-information">
               <div class="Person-name">MARCO DE SÁ</div>
-              <div class="Person-company">Senior UX Researcher, Twitter</div>
+              <div class="Person-company">Twitter</div>
+              <div class="Person-job">Senior UX Researcher</div>
               <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/marcodesa"><img src="images/linkedin.png"/></a>
             </div>
           </div>
@@ -239,7 +244,8 @@
             <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
-              <div class="Person-company">Founder @ Red Roof Industries</div>
+              <div class="Person-company">Red Roof Industries</div>
+              <div class="Person-job">Founder</div>
               <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img src="images/linkedin.png"/></a>
             </div>
           </div>
@@ -249,7 +255,8 @@
             <img class="Person-image" src="images/vascomorais.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
-              <div class="Person-company">General Counsel @ ATEL Capital Group</div>
+              <div class="Person-company">ATEL Capital Group</div>
+              <div class="Person-job">General Counsel </div>
               <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/vasco-morais/0/89/610"><img src="images/linkedin.png"/></a>
             </div>
           </div>
