Mobile fixes on form and footer

--- a/app/index.html
+++ b/app/index.html
@@ -189,8 +189,8 @@
           class="NewsletterForm"
           target="_blank"
           novalidate>
-          <div class="InputGroup InputGroup--bottomBorder">
-            <div class="InputGroup-column">
+          <div class="InputGroup">
+            <div class="InputGroup-column InputGroup-marginOnSmall">
               <label class="InputGroup-label" for="firstName">First Name</label>
               <input class="InputGroup-input" type="text" name="FNAME" id="mce-FNAME" placeholder="First Name">
             </div>
@@ -199,7 +199,7 @@
               <input class="InputGroup-input" type="text" name="LNAME" id="mce-LNAME" placeholder="Last Name">
             </div>
           </div>
-          <div class="InputGroup">
+          <div class="InputGroup InputGroup--noBorder">
             <div class="InputGroup-column">
               <label class="InputGroup-label" for="email">Email</label>
               <input class="InputGroup-input" type="email" name="EMAIL" id="mce-EMAIL" placeholder="Email">
