Buttons scroll to form

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
         </p>
       </div>
       <div class="Panel-content">
-        <div class="Button">join us</a>
+        <a href="#newsletter" class="Button">join us</a>
       </div>
     </section>
 
@@ -161,15 +161,15 @@
 
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
-          <div class="Button">REACH OUT</div>
+          <a href="#newsletter" class="Button">REACH OUT</a>
         </div>
         <div class="TwoColumnContainer-column">
-          <div class="Button">RECOMMEND</div>
+          <a href="#newsletter" class="Button">RECOMMEND</a>
         </div>
       </div>
     </section>
 
-    <section class="Panel Panel--blue Panel--cta">
+    <section class="Panel Panel--blue Panel--cta" id="newsletter">
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
