adds links to w2w

--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--solidWhite">
+    <section class="Panel Panel--solidWhite" id="newsletter">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-titleSans">How to</div>
@@ -161,15 +161,15 @@
 
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
-          <a href="#newsletter" class="Button">REACH OUT</a>
+          <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button">REACH OUT</a>
         </div>
         <div class="TwoColumnContainer-column">
-          <a href="#newsletter" class="Button">RECOMMEND</a>
+          <a href="https://westtowest.typeform.com/to/UF6pDj" target="_blank" class="Button">REACH OUT</a>
         </div>
       </div>
     </section>
 
-    <section class="Panel Panel--blue Panel--cta" id="newsletter">
+    <section class="Panel Panel--blue Panel--cta">
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
