Adds button hover effect

--- a/app/index.html
+++ b/app/index.html
@@ -205,7 +205,7 @@
               <input class="InputGroup-input" type="email" name="EMAIL" id="mce-EMAIL" placeholder="Email">
             </div>
           </div>
-          <button type="submit" class="Button Button--outline">join us</button>
+          <button type="submit" class="Button Button--outline">submit</button>
         </form>
       </div>
     </section>
