--- a/app/index.html
+++ b/app/index.html
@@ -224,7 +224,7 @@
               <div class="Person-name">PEDRO SANTOS VIEIRA</div>
               <div class="Person-company">GoodGuide</div>
               <div class="Person-job">VP, Data and Science</div>
-              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/santosvieira"><img src="images/linkedin.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/santosvieira"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -235,7 +235,7 @@
               <div class="Person-name">MARCO DE SÁ</div>
               <div class="Person-company">Twitter</div>
               <div class="Person-job">Senior UX Researcher</div>
-              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/marcodesa"><img src="images/linkedin.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/marcodesa"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -246,7 +246,7 @@
               <div class="Person-name">ANGELA COSTA SIMÕES</div>
               <div class="Person-company">Red Roof Industries</div>
               <div class="Person-job">Founder</div>
-              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img src="images/linkedin.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/angelacostasimoes"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -257,7 +257,7 @@
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
               <div class="Person-company">ATEL Capital Group</div>
               <div class="Person-job">General Counsel </div>
-              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/vasco-morais/0/89/610"><img src="images/linkedin.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/vasco-morais/0/89/610"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -278,7 +278,7 @@
               <div class="Person-name">LINO M. AMARAL</div>
               <div class="Person-company">Luso-American Life Insurance Society</div>
               <div class="Person-job">CEO</div>
-              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -289,7 +289,7 @@
               <div class="Person-name">NUNO GONÇALVES PEDRO</div>
               <div class="Person-company">Strive Capital</div>
               <div class="Person-job">Managing Partner</div>
-              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -300,7 +300,7 @@
               <div class="Person-name">TORBEN RANKINE</div>
               <div class="Person-company">Leadership Business Consulting</div>
               <div class="Person-job">Country Manager</div>
-              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
               <div class="Person-name">JOÃO METELO</div>
               <div class="Person-company">Principle Power</div>
               <div class="Person-job">CEO</div>
-              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -322,7 +322,7 @@
               <div class="Person-name">NUNO MATHIAS</div>
               <div class="Person-company">Consulate General of Portugal in San Francisco</div>
               <div class="Person-job">Consul General</div>
-              <a class="Person-link" target="_blank"><img src="images/linkedin.png"/></a>
+              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
               <div class="Person-name">Bernardo de Seabra</div>
               <div class="Person-company">BrightRoll</div>
               <div class="Person-job">Software Engineer</div>
-              <a class="Person-link" target="_blank" href="https://www.linkedin.com/in/bseabra"><img src="images/linkedin.png"/></a>
+              <a target="_blank" href="https://www.linkedin.com/in/bseabra"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
