Adds linkedin links

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <p class="Hero-content">
-        Portuguese entrepreneurs discovered half of the world during the age of discovery. Now it's time to help the world discover Portugal and its modern-day entrepreneurs.
+        Portuguese entrepreneurs discovered half of the world during the <i>Age of Discovery.</i> Now it's time to help the world discover Portugal and its modern-day entrepreneurs.
       </p>
     </section>
 
@@ -278,7 +278,7 @@
               <div class="Person-name">LINO M. AMARAL</div>
               <div class="Person-company">Luso-American Life Insurance Society</div>
               <div class="Person-job">CEO</div>
-              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a href="https://www.linkedin.com/in/linoamaral" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -289,7 +289,7 @@
               <div class="Person-name">NUNO GONÇALVES PEDRO</div>
               <div class="Person-company">Strive Capital</div>
               <div class="Person-job">Managing Partner</div>
-              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a href="https://www.linkedin.com/pub/nuno-goncalves-pedro/0/32a/697" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -300,7 +300,7 @@
               <div class="Person-name">TORBEN RANKINE</div>
               <div class="Person-company">Leadership Business Consulting</div>
               <div class="Person-job">Country Manager</div>
-              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a href="https://www.linkedin.com/in/torbenrankine" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
               <div class="Person-name">JOÃO METELO</div>
               <div class="Person-company">Principle Power</div>
               <div class="Person-job">CEO</div>
-              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a href="https://www.linkedin.com/pub/joão-metelo/72/924/632" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
@@ -322,7 +322,7 @@
               <div class="Person-name">NUNO MATHIAS</div>
               <div class="Person-company">Consulate General of Portugal in San Francisco</div>
               <div class="Person-job">Consul General</div>
-              <a target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
+              <a href="https://www.linkedin.com/pub/nuno-mathias/54/1a0/507/en" target="_blank"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
