--- a/app/index.html
+++ b/app/index.html
@@ -33,11 +33,11 @@
       <div class="Logo"></div>
 
       <div class="Hero-title">
-        <div class="Hero-titleSans">
+        <div class="Hero-heading">
           BRIDGING
         </div>
 
-        <div class="Hero-titleSerif">
+        <div class="Hero-subHeading">
           Portugal and Silicon Valley
         </div>
       </div>
@@ -50,8 +50,8 @@
     <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">Our</div>
-        <div class="Panel-titleSerif">mission</div>
+        <div class="Panel-heading">Our</div>
+        <div class="Panel-subHeading">mission</div>
       </div>
       <div class="Panel-content">
         <p class="Panel-text">
@@ -75,8 +75,8 @@
       </div>
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">What</div>
-        <div class="Panel-titleSerif">we offer</div>
+        <div class="Panel-heading">What</div>
+        <div class="Panel-subHeading">we offer</div>
       </div>
 
       <div class="TwoColumnContainer">
@@ -134,8 +134,8 @@
     <section class="Panel Panel--solidWhite" id="newsletter">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">How to</div>
-        <div class="Panel-titleSerif">get involved</div>
+        <div class="Panel-heading">How to</div>
+        <div class="Panel-subHeading">get involved</div>
       </div>
 
       <div class="TwoColumnContainer">
@@ -213,8 +213,8 @@
     <section class="Panel Panel--blue Panel--solidBlue">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">Our</div>
-        <div class="Panel-titleSerif">officers</div>
+        <div class="Panel-heading">Our</div>
+        <div class="Panel-subHeading">officers</div>
       </div>
       <div class="Grid">
         <div class="Grid-cell">
@@ -267,8 +267,8 @@
     <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">Our</div>
-        <div class="Panel-titleSerif">board</div>
+        <div class="Panel-heading">Our</div>
+        <div class="Panel-subHeading">board</div>
       </div>
       <div class="Grid">
         <div class="Grid-cell">
@@ -343,8 +343,8 @@
     <section class="Panel Panel--solidWhite">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
-        <div class="Panel-titleSans">valuable</div>
-        <div class="Panel-titleSerif">Sponsors and Partners</div>
+        <div class="Panel-heading">valuable</div>
+        <div class="Panel-subHeading">Sponsors and Partners</div>
       </div>
       <div class="SponsorGrid">
         <img class="SponsorGrid-cell" src="images/portugal.png">
