--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--blue">
+    <section class="Panel Panel--blue Panel--services">
       <div class="Background">
         <div class="BackgroundColumn BackgroundColumn--blue"></div>
         <div class="BackgroundColumn BackgroundColumn--imageServices"></div>
@@ -89,17 +89,17 @@
             The first step is always the hardest one. We help ventures setup in Silicon Valley by giving them a better understanding of the work culture and business environment. We also help them get support with everything else from basic logistics to immigration issues.
           </div>
         </div>
-        <div class="TwoColumnContainer-column"></div>
+        <div class="TwoColumnContainer-column u-hideOnMobile"></div>
       </div>
     </section>
 
-    <section class="Panel">
+    <section class="Panel Panel--mentorship">
       <div class="Background">
         <div class="BackgroundColumn BackgroundColumn--imageMentorship BackgroundColumn--rightAlign"></div>
         <div class="BackgroundColumn BackgroundColumn--white"></div>
       </div>
       <div class="TwoColumnContainer">
-        <div class="TwoColumnContainer-column"></div>
+        <div class="TwoColumnContainer-column u-hideOnMobile"></div>
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
             MENTORSHIP
@@ -112,7 +112,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--blue">
+    <section class="Panel Panel--blue Panel--networking">
       <div class="Background">
         <div class="BackgroundColumn BackgroundColumn--green"></div>
         <div class="BackgroundColumn BackgroundColumn--imageNetworking"></div>
@@ -127,7 +127,7 @@
             Our network expands way beyond the Portuguese Diáspora. Ventures come to us at many different stages of development. We leverage the depth of our network to connect entrepreneurs with the right people at the right time.
           </div>
         </div>
-        <div class="TwoColumnContainer-column"></div>
+        <div class="TwoColumnContainer-column u-hideOnMobile"></div>
       </div>
     </section>
 
@@ -147,6 +147,9 @@
           <div class="TwoColumnContainer-contentBlack">
             If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
           </div>
+          <div class="u-hideOnDesktop u-marginDefault">
+            <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button">REACH OUT</a>
+          </div>
         </div>
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
@@ -161,9 +164,10 @@
 
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
+          <div class="u-hideOnDesktop u-marginHalf"></div>
           <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button">REACH OUT</a>
         </div>
-        <div class="TwoColumnContainer-column">
+        <div class="TwoColumnContainer-column u-hideOnMobile">
           <a href="https://westtowest.typeform.com/to/UF6pDj" target="_blank" class="Button">REACH OUT</a>
         </div>
       </div>
@@ -340,7 +344,7 @@
       </div>
     </section>
 
-    <section class="Panel Panel--solidWhite">
+    <section class="Panel Panel--solidWhite Panel--noPaddingTop">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-heading">valuable</div>
