--- a/app/index.html
+++ b/app/index.html
@@ -356,10 +356,20 @@
     </section>
 
     <section class="Footer">
-      <div class="Logo Logo--half"></div>
-      <p class="Footer-content">
-        Bridging Portugal and Silicon Valley
-      </p>
+      <div class="Footer-column">
+        <div class="Logo Logo--half"></div>
+        <p class="Footer-content">
+          Bridging Portugal and Silicon Valley
+        </p>
+      </div>
+      <div class="Footer-column">
+        <a href="https://subvisual.co" target="_blank" class="Footer-credits">
+          HANDCRAFTED BY
+          <div class="Footer-svgWrapper">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 115 16"><title>SUBVISUAL</title><g id="Landing" fill="none" fill-rule="evenodd"><g id="Mobile" fill="#FFF"><path id="SUBVISUAL" d="M9.47 2.52l-1.45.87C7.48 2.46 6.7 2 5.68 2c-.62 0-1.2.2-1.7.6-.5.38-.74.88-.74 1.5 0 .87.67 1.56 2.03 2.08l1.05.4C7.48 7.05 8.37 7.6 9 8.3c.62.66.94 1.57.94 2.7 0 1.32-.45 2.4-1.35 3.27-.9.86-2 1.3-3.33 1.3-1.18 0-2.18-.4-3.02-1.17C1.4 13.6.9 12.64.75 11.45l1.85-.4c-.02.8.25 1.46.8 2 .55.52 1.22.78 2.02.78.78 0 1.42-.28 1.93-.84.5-.57.77-1.24.77-2.02 0-.7-.23-1.27-.67-1.67C7 8.9 6.4 8.55 5.6 8.2l-1-.4c-1-.44-1.78-.93-2.34-1.48-.56-.56-.85-1.3-.85-2.23 0-1.15.44-2.06 1.3-2.75C3.54.65 4.54.3 5.7.3c1.67 0 2.93.75 3.75 2.22zM14.1.62h1.82v8.62c0 3.06 1.18 4.6 3.53 4.6 2.35 0 3.52-1.54 3.52-4.6V.62h1.83v9.24c0 1.65-.5 3-1.45 4.08-.96 1.06-2.26 1.6-3.9 1.6-1.64 0-2.94-.54-3.9-1.6-.97-1.07-1.45-2.43-1.45-4.08V.62zm17.3 1.63V7.1h.47c1 0 1.78-.18 2.32-.5.53-.35.8-1 .8-1.95 0-.94-.26-1.58-.8-1.9-.54-.34-1.3-.5-2.3-.5h-.5zm0 6.3v5.05h1.4c2.3 0 3.44-.86 3.44-2.58 0-.5-.1-.9-.33-1.25-.22-.34-.53-.6-.9-.76-.4-.16-.8-.28-1.2-.35-.4-.07-.82-.1-1.28-.1H31.4zm-1.82 6.68V.63h1.78c.75 0 1.42.05 2.02.16.6.1 1.15.3 1.67.6.53.26.93.68 1.22 1.22.3.55.44 1.22.44 2 0 .57-.13 1.1-.42 1.65-.28.53-.66.9-1.14 1.13v.04c.84.15 1.54.6 2.1 1.3.55.72.83 1.52.83 2.4 0 1.37-.5 2.4-1.48 3.07-1 .7-2.2 1.03-3.6 1.03h-3.42zM42.98.63l4.36 10.8L51.68.63h2L47.34 16 41 .62h2zm16.12 0v14.6h-1.82V.63h1.82zm13.1 1.9l-1.46.86C70.2 2.46 69.42 2 68.4 2c-.62 0-1.18.2-1.68.6-.5.38-.76.88-.76 1.5 0 .87.68 1.56 2.03 2.08l1.04.4c1.16.46 2.06 1.02 2.68 1.7.63.66.94 1.57.94 2.7 0 1.32-.45 2.4-1.34 3.27-.9.86-2 1.3-3.33 1.3-1.18 0-2.2-.4-3.03-1.17-.84-.77-1.33-1.74-1.5-2.93l1.85-.4c0 .8.26 1.46.8 2 .55.52 1.23.78 2.03.78.77 0 1.42-.28 1.93-.84.5-.57.76-1.24.76-2.02 0-.7-.22-1.27-.67-1.67-.44-.4-1.06-.76-1.85-1.1l-1-.4c-1-.44-1.78-.93-2.34-1.48-.56-.56-.84-1.3-.84-2.23 0-1.15.43-2.06 1.28-2.75C66.27.65 67.28.3 68.44.3c1.68 0 2.93.75 3.76 2.22zm4.63-1.9h1.82v8.6c0 3.07 1.17 4.6 3.52 4.6s3.53-1.53 3.53-4.6V.64h1.82v9.23c0 1.65-.48 3-1.44 4.08-.97 1.06-2.27 1.6-3.9 1.6-1.65 0-2.95-.54-3.9-1.6-.97-1.07-1.45-2.43-1.45-4.08V.62zm24.4 10.93h-6.7l-1.66 3.67H90.9L97.9 0l6.98 15.23h-1.96l-1.67-3.67zm-.75-1.66L97.88 4l-2.6 5.9h5.2zm9.84-9.28v12.94h4.44v1.67h-6.26V.63h1.82z"/></g></g></svg>
+          </div>
+        </a>
+      </div>
     </section>
 
     <!-- build:js(.) scripts/vendor.js -->
