--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,16 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <nav class="Nav">
+      <div class="Nav-logo"></div>
+      <div class="Nav-links">
+        <a href="#" class="Nav-link">Mission</a>
+        <a href="#" class="Nav-link">What we offer</a>
+        <a href="#" class="Nav-link">officers</a>
+        <a href="#" class="Nav-link">board</a>
+        <a href="#" class="Nav-link">experts</a>
+      </div>
+    </nav>
 
     <section class="Hero">
       <div class="Logo"></div>
