--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <nav class="Nav">
+    <nav class="Nav Nav--onTop">
       <div class="Nav-logo"></div>
       <div class="Nav-links">
         <a href="#" class="Nav-link">Mission</a>
@@ -384,6 +384,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -393,6 +394,7 @@
 
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/nav.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
