--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
         <a href="#" class="Nav-link">board</a>
         <a href="#" class="Nav-link">experts</a>
       </div>
+      <div class="Nav-burger u-hideOnDesktop"></div>
     </nav>
 
     <section class="Hero">
