Refactor nav-overlay to its own component

--- a/app/index.html
+++ b/app/index.html
@@ -38,22 +38,22 @@
         <a href="#" class="Nav-link">experts</a>
       </div>
       <div class="Nav-burger u-hideOnDesktop"></div>
-
-      <div class="Nav-overlay Nav-overvlayHide">
-        <div class="Nav-overlayHeader">
-          <div class="Nav-close"></div>
-        </div>
-        <a href="#mission" class="Nav-overlayLink">Mission</a>
-        <div class="Nav-separator"></div>
-        <a href="#services" class="Nav-overlayLink">What we offer</a>
-        <div class="Nav-separator"></div>
-        <a href="#officers" class="Nav-overlayLink">officers</a>
-        <div class="Nav-separator"></div>
-        <a href="#board" class="Nav-overlayLink">board</a>
-        <div class="Nav-separator"></div>
-        <a href="#" class="Nav-overlayLink">experts</a>
-      </div>
     </nav>
+
+    <section class="Overlay is-hidden">
+      <div class="Overlay-header">
+        <div class="Overlay-close"></div>
+      </div>
+      <a href="#mission" class="Overlay-link">Mission</a>
+      <div class="Overlay-separator"></div>
+      <a href="#services" class="Overlay-link">What we offer</a>
+      <div class="Overlay-separator"></div>
+      <a href="#officers" class="Overlay-link">officers</a>
+      <div class="Overlay-separator"></div>
+      <a href="#board" class="Overlay-link">board</a>
+      <div class="Overlay-separator"></div>
+      <a href="#" class="Overlay-link">experts</a>
+    </section>
 
     <section class="Hero">
       <div class="Logo"></div>
