Experts page mobile

--- a/app/experts.html
+++ b/app/experts.html
@@ -95,10 +95,9 @@
 
           <div class="ExpertsList-tags">
             <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
+            <div class="ExpertsList-tag">Design</div>
+            <div class="ExpertsList-tag">Machine Learning</div>
+            <div class="ExpertsList-tag">Founder</div>
           </div>
 
         </div>
@@ -123,10 +122,9 @@
 
           <div class="ExpertsList-tags">
             <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
-            <div class="ExpertsList-tag">Business Development</div>
+            <div class="ExpertsList-tag">Design</div>
+            <div class="ExpertsList-tag">Machine Learning</div>
+            <div class="ExpertsList-tag">Founder</div>
           </div>
 
         </div>
