Removes experts link while the page isn't tottaly completed

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
         <a href="#services" class="Nav-link">What we offer</a>
         <a href="#officers" class="Nav-link">officers</a>
         <a href="#board" class="Nav-link">board</a>
-        <a href="#" class="Nav-link">experts</a>
+        <!-- <a href="#" class="Nav-link">experts</a> -->
       </div>
       <div class="Nav-burger u-hideOnDesktop"></div>
     </nav>
@@ -51,8 +51,8 @@
       <a href="#officers" class="Overlay-link">officers</a>
       <div class="Overlay-separator"></div>
       <a href="#board" class="Overlay-link">board</a>
-      <div class="Overlay-separator"></div>
-      <a href="#" class="Overlay-link">experts</a>
+      <!-- <div class="Overlay-separator"></div>
+      <a href="#" class="Overlay-link">experts</a> -->
     </section>
 
     <section class="Hero">
