Small fixes on margins and Safari column wrap

--- a/app/experts.html
+++ b/app/experts.html
@@ -60,7 +60,7 @@
 
       <div class="Hero-title">
         <div class="Hero-heading">
-          our
+          OUR
         </div>
 
         <div class="Hero-subHeading">
