--- a/app/index.html
+++ b/app/index.html
@@ -79,15 +79,17 @@
         <div class="Panel-heading">Our</div>
         <div class="Panel-subHeading">mission</div>
       </div>
-      <p class="Panel-text">
-        Create and support a thriving environment for Portuguese entrepreneurship in San Francisco.
-      </p>
       <div class="Panel-content">
+        <p class="Panel-text">
+          Create and support a thriving environment for Portuguese entrepreneurship in San Francisco.
+        </p>
+      </div>
+      <div class="Panel-content u-marginHalf">
         <p class="Panel-text">
           Join us if you need help or want to help.
         </p>
       </div>
-      <div class="Panel-content">
+      <div class="Panel-content u-marginHalf">
         <a href="#newsletter" class="Button">join us</a>
       </div>
     </section>
@@ -189,9 +191,9 @@
       <div class="TwoColumnContainer">
         <div class="TwoColumnContainer-column">
           <div class="u-hideOnDesktop u-marginHalf"></div>
-          <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button">REACH OUT</a>
+          <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button u-marginSmall">REACH OUT</a>
         </div>
-        <div class="TwoColumnContainer-column u-hideOnMobile">
+        <div class="TwoColumnContainer-column u-hideOnMobile u-marginSmall">
           <a href="https://westtowest.typeform.com/to/UF6pDj" target="_blank" class="Button">REACH OUT</a>
         </div>
       </div>
