--- a/app/index.html
+++ b/app/index.html
@@ -389,6 +389,10 @@
         <p class="Footer-content">
           Bridging Portugal and Silicon Valley
         </p>
+        <div>
+          <a href="https://www.facebook.com/thewesttowest/?fref=ts" target="_blank"><img class="Footer-socialIcon" src="images/facebook-icon.png"/></a>
+          <a href="https://twitter.com/TheWesttoWest" target="_blank"><img class="Footer-socialIcon" src="images/twitter-icon.png"/></a>
+        </div>
       </div>
       <div class="Footer-column">
         <a href="https://subvisual.co" target="_blank" class="Footer-credits">
