--- a/app/index.html
+++ b/app/index.html
@@ -31,13 +31,13 @@
     <nav class="Nav Nav--onTop">
       <div class="Nav-logo"></div>
       <div class="Nav-links">
-        <a href="#mission" class="Nav-link">Mission</a>
         <a href="#services" class="Nav-link">What we offer</a>
+        <a href="#newsletter" class="Nav-link">get involved</a>
         <a href="#officers" class="Nav-link">officers</a>
         <a href="#board" class="Nav-link">board</a>
         <!-- <a href="#" class="Nav-link">experts</a> -->
       </div>
-      <div class="Nav-burger u-hideOnDesktop"></div>
+      <div class="Nav-burger"></div>
     </nav>
 
     <section class="Overlay is-hidden">
