fixed column distance for "newsletter", "subscribe", "officers" and "board"

--- a/app/index.html
+++ b/app/index.html
@@ -165,7 +165,7 @@
       </div>
 
       <div class="TwoColumnContainer">
-        <div class="TwoColumnContainer-column">
+        <div class="TwoColumnContainer-column TwoColumnContainer-column--withMargin">
           <div class="TwoColumnContainer-title">
             ASK FOR HELP
           </div>
@@ -173,9 +173,11 @@
           <div class="TwoColumnContainer-contentBlack">
             If you’re an entrepreneur or venture looking to move to Silicon Valley, or just get mentoring and learn from our experience in Silicon Valley, please reach out and we’ll get back to you with next steps.
           </div>
-          <div class="u-hideOnDesktop u-marginDefault">
+          <div class="u-marginSmall"></div>
+          <div class="TwoColumnContainer-button">
             <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button">REACH OUT</a>
           </div>
+          <div class="u-marginBottomSmall u-hideOnDesktop"></div>
         </div>
         <div class="TwoColumnContainer-column">
           <div class="TwoColumnContainer-title">
@@ -185,23 +187,18 @@
           <div class="TwoColumnContainer-contentBlack">
             If you’re an experienced entrepreneur or domain expert and want to get involved with top-notch entrepreneurs, please reach out to us. If there’s a good fit, we’ll add you to our list of experts and connect you with ventures which can use your expertise.
           </div>
+          <div class="u-marginSmall"></div>
+          <div class="TwoColumnContainer-button">
+            <a href="https://westtowest.typeform.com/to/UF6pDj" target="_blank" class="Button">REACH OUT</a>
+          </div>
         </div>
       </div>
-
-      <div class="TwoColumnContainer">
-        <div class="TwoColumnContainer-column">
-          <div class="u-hideOnDesktop u-marginHalf"></div>
-          <a href="https://westtowest.typeform.com/to/E8Nlyj" target="_blank" class="Button u-marginSmall">REACH OUT</a>
-        </div>
-        <div class="TwoColumnContainer-column u-hideOnMobile u-marginSmall">
-          <a href="https://westtowest.typeform.com/to/UF6pDj" target="_blank" class="Button">REACH OUT</a>
-        </div>
       </div>
     </section>
 
     <section class="Panel Panel--blue Panel--cta" id="subscribe">
       <div class="TwoColumnContainer">
-        <div class="TwoColumnContainer-column">
+        <div class="TwoColumnContainer-column TwoColumnContainer-column--withMargin">
           <div class="TwoColumnContainer-title">
             STAY UP-TO-DATE
           </div>
@@ -246,7 +243,7 @@
         <div class="Panel-subHeading">officers</div>
       </div>
       <div class="Grid">
-        <div class="Grid-cell">
+        <div class="Grid-cell Grid--withMargin">
           <div class="Person">
             <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
@@ -268,7 +265,7 @@
             </div>
           </div>
         </div>
-        <div class="Grid-cell">
+        <div class="Grid-cell Grid--withMargin">
           <div class="Person">
             <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
@@ -300,7 +297,7 @@
         <div class="Panel-subHeading">board</div>
       </div>
       <div class="Grid">
-        <div class="Grid-cell">
+        <div class="Grid-cell Grid--withMargin">
           <div class="Person Person--dark">
             <img class="Person-image" src="images/linoamaral.png"/></img>
             <div class="Person-information">
@@ -322,7 +319,7 @@
             </div>
           </div>
         </div>
-        <div class="Grid-cell">
+        <div class="Grid-cell Grid--withMargin">
           <div class="Person Person--dark">
             <img class="Person-image" src="images/torbenrankine.png"/></img>
             <div class="Person-information">
@@ -344,7 +341,7 @@
             </div>
           </div>
         </div>
-        <div class="Grid-cell">
+        <div class="Grid-cell Grid--withMargin">
           <div class="Person Person--dark Person--noMargin">
             <img class="Person-image" src="images/nunomathias.png"/></img>
             <div class="Person-information">
