added new sponsors and appropriate stylings;

--- a/app/index.html
+++ b/app/index.html
@@ -376,9 +376,13 @@
         <div class="Panel-subHeading">Sponsors and Partners</div>
       </div>
       <div class="SponsorGrid">
-        <img class="SponsorGrid-cell" src="images/portugal.png">
-        <img class="SponsorGrid-cell" src="images/lusoamerican.png">
-        <img class="SponsorGrid-cell" src="images/startup.png">
+        <div class="SponsorGrid-row">
+            <img class="SponsorGrid-cell" src="images/lusoamerican.png">
+            <img class="SponsorGrid-cell" src="images/portugal.png">
+            <img class="SponsorGrid-cell" src="images/startup.png">
+            <img class="SponsorGrid-cell" src="images/aicepa.jpg">
+            <img class="SponsorGrid-cell" src="images/sataairlines.png">
+        </div>
       </div>
     </section>
 
