Add team page and update index
* Creating team page with "Officers" and "Board" sections;
* Adding "Officer & Board" section to index;
* Refactoring Grid component;

--- a/app/experts.html
+++ b/app/experts.html
@@ -107,8 +107,8 @@
             <img class="Person-image" src="images/nunogoncalves.png"/></img>
             <div class="Person-information">
               <div class="Person-name">NUNO GONÇALVES PEDRO</div>
-              <div class="Person-company">Strive Capital</div>
-              <div class="Person-job">Managing Partner</div>
+              <div class="Person-company">Delta Partners Group</div>
+              <div class="Person-job">Partner</div>
             </div>
           </div>
 
