--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,7 @@
     <nav class="Nav Nav--onTop">
       <div class="Nav-logo"></div>
       <div class="Nav-links">
-        <a href="#services" class="Nav-link">What we offer</a>
-        <a href="#newsletter" class="Nav-link">get involved</a>
-        <a href="#officers" class="Nav-link">officers</a>
-        <a href="#board" class="Nav-link">board</a>
-        <!-- <a href="#" class="Nav-link">experts</a> -->
+        <a href="/team.html" class="Nav-link">officers & board</a>
       </div>
       <div class="Nav-burger"></div>
     </nav>
@@ -379,14 +375,14 @@
       </div>
     </section>
 
-    <section class="Panel Panel--blue Panel--solidBlue" id="officers">
+    <section class="Panel Panel--blue Panel--team" id="team">
       <div class="Panel-title">
         <div class="Panel-titleImage"></div>
         <div class="Panel-heading">Our</div>
-        <div class="Panel-subHeading">officers</div>
+        <div class="Panel-subHeading">Officers & Board</div>
       </div>
       <div class="Grid">
-        <div class="Grid-cell Grid--withMargin">
+        <div class="Grid-cell">
           <div class="Person">
             <img class="Person-image" src="images/pedrovieira.png"/></img>
             <div class="Person-information">
@@ -403,12 +399,12 @@
             <div class="Person-information">
               <div class="Person-name">MARCO DE SÁ</div>
               <div class="Person-company">Twitter</div>
-              <div class="Person-job">Senior UX Researcher</div>
+              <div class="Person-job">User Research Manager</div>
               <a target="_blank" href="https://www.linkedin.com/in/marcodesa"><img class="Person-link" src="images/linkedin@2x.png"/></a>
             </div>
           </div>
         </div>
-        <div class="Grid-cell Grid--withMargin">
+        <div class="Grid-cell">
           <div class="Person">
             <img class="Person-image" src="images/angelasimoes.png"/></img>
             <div class="Person-information">
@@ -420,8 +416,8 @@
           </div>
         </div>
         <div class="Grid-cell">
-          <div class="Person Person--noMargin">
-            <img class="Person-image" src="images/vascomorais.png"/></img>
+          <div class="Person">
+            <img class="Person-image" src="images/vasco.png"/></img>
             <div class="Person-information">
               <div class="Person-name">VASCO HENRIQUE MORAIS</div>
               <div class="Person-company">ATEL Capital Group</div>
@@ -430,6 +426,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="u-marginHalf">
+        <a href="/team.html" target="_blank" class="Button Button--outline">See Full Team</a>
       </div>
     </section>
 
@@ -539,7 +538,7 @@
           <a href="https://twitter.com/TheWesttoWest" target="_blank"><img class="Footer-socialIcon" src="images/twitter-icon.png"/></a>
         </div>
       </div>
-      
+
       <div class="u-hideOnMobile">
         <div class="Footer-column">
             <div class="Footer-links">
@@ -558,7 +557,7 @@
             </div>
         </div>
       </div>
-      
+
       <div class="u-hideOnMobile">
         <div class="Footer-column">
           <div class="Footer-links">
